@@ -381,6 +381,8 @@ N(OP_OnLevelMessage),
 N(OP_RequestKnowledgeBase),
 N(OP_KnowledgeBase),
 N(OP_VetRewardsAvaliable),
+N(OP_VetClaimRequest),
+N(OP_VetClaimReply),
 N(OP_WeaponEquip1),
 N(OP_WeaponEquip2),
 N(OP_WeaponUnequip2),
