@@ -486,7 +486,9 @@ OP_LoginComplete=0x0000     		#
 
 #discovered opcodes not yet used:
 OP_PickLockSuccess=0x0000		#
-OP_VetRewardsAvaliable=0x0000		#
+OP_VetRewardsAvaliable=0x044b		#
+OP_VetClaimRequest=0x7503
+OP_VetClaimReply=0x01e1
 OP_PlayMP3=0x0000			#
 OP_ReclaimCrystals=0x0000		#
 OP_CrystalCountUpdate=0x0000		#
